--- a/IdentityServer/OnlineCourse.IdentityServer/OnlineCourse.IdentityServer.csproj
+++ b/IdentityServer/OnlineCourse.IdentityServer/OnlineCourse.IdentityServer.csproj
@@ -22,4 +22,9 @@
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.5" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="3.1.5" />
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\OnlineCourse.Extensions\OnlineCourse.Extensions.csproj" />
+    <ProjectReference Include="..\..\OnlineCourse.Shared\OnlineCourse.Shared.csproj" />
+  </ItemGroup>
 </Project>
