--- a/Services/Catalog/OnlineCourse.Catalog/appsettings.json
+++ b/Services/Catalog/OnlineCourse.Catalog/appsettings.json
@@ -3,6 +3,7 @@
     "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "OnlineCourse"
   },
+  "IdentityServer": "http://localhost:5001",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
